@@ -63,6 +63,10 @@ NEW FEATURES
 	argument to allow the classifying factors to be returned as
 	character vectors rather than the default factor type.
 
+    o	If model.frame.default() encounters a character variable where
+    	'xlev' indicates a factor, it now converts the variable to a
+    	factor (with a warning).
+
 
 DEPRECATED & DEFUNCT
 
